--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'TR'
 - !lcsh 'Photography -- Printing processes -- Silver'
 - !lcsh 'Photography -- Enlarging'
+- GITenberg
 title: "Bromide Printing and Enlarging\r\nA Practical Guide to the Making of Bromide\
   \ Prints by Contact and Bromide Enlarging by Daylight and Artificial Light, With\
   \ the Toning of Bromide Prints and Enlargements"
